@@ -1,5 +1,6 @@
 Build.PL
 Changes
+inc/Test/Run/Builder.pm
 lib/Statistics/Descriptive.pm
 Makefile.PL
 MANIFEST
